sample/banana.yaml

kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana-app
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"
      resources: 
        limits: 
          cpu: 100m 
          memory: 200Mi 
        requests: 
          cpu: 100m 
          memory: 200Mi 

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana-app
  ports:
    - port: 5678 # Default port for image
