sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  ingressClassName: nginx
  rules:
  - host: 'ingress-test.my'
    http:
      paths:
        - path: /apple
          backend:
            service:
              name: apple-service
              port:
                number: 5678
          pathType: Exact
        - path: /banana
          backend:
            service:
              name: banana-service
              port:
                number: 5678
          pathType: Exact
